feat: add advertising placement area types
